@@ -19,6 +19,10 @@ Changes to the Mercury language:
 
 Changes to the Mercury standard library:
 
+* The globals field in the I/O state is no longer unique.  The modes of
+  the access predicates, io.set_globals/3 and io.get_globals/3 have been
+  changed accordingly.
+
 * We have moved some of the concurrency primitives out of the extras
   distribution and into a new standard library module called `thread',
   and its submodules `thread.channel', `thread.mvar', and `thread.semaphore'.
